--- a/Keras11_seq2seq.ipynb
+++ b/Keras11_seq2seq.ipynb
@@ -46,7 +46,8 @@
       },
       "source": [
         "# シンプルなseq2seq\n",
-        "Seq2Seqで正弦(sin)関数から余弦(cos)関数への変換を実施 "
+        "Seq2Seqで正弦(sin)関数から余弦(cos)関数への変換を実施<br>\n",
+        "記事[「【Keras入門(7)】単純なSeq2Seqモデル定義」](https://qiita.com/FukuharaYohei/items/27cd247342a0f7006511)参照"
       ]
     },
     {
